# Commode

./: .gitattributes  .gitignore  MASTER.md  README.md  ROADMAP.md  VALIDATION.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: actions.rs  history.rs  icons.rs  lib.rs  main.rs  metadata.rs  storage.rs  terminal.rs  updates.rs
